# gapi/rpc_update_user.go
@@ -1,0 +1,100 @@
+package gapi
+
+import (
+	"context"
+	"time"
+
+	db "github.com/ZhangZhihuiAAA/zimplebank/db/sqlc"
+	"github.com/ZhangZhihuiAAA/zimplebank/pb"
+	"github.com/ZhangZhihuiAAA/zimplebank/util"
+	"github.com/ZhangZhihuiAAA/zimplebank/validation"
+	"github.com/jackc/pgx/v5/pgtype"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) UpdateUser(ctx context.Context, req *pb.UpdateUserRequest) (*pb.UpdateUserResponse, error) {
+    authPayload, err := server.authorizeUser(ctx)
+    if err != nil {
+        return nil, unauthenticatedError(err)
+    }
+
+    violations := validateUpdateUserRequest(req)
+    if violations != nil {
+        return nil, invalidArgumentError(violations)
+    }
+
+    if authPayload.Username != req.GetUsername() {
+        return nil, status.Error(codes.PermissionDenied, "cannot update other user's info")
+    }
+
+    arg := db.UpdateUserParams{
+        Username: req.GetUsername(),
+        FullName: pgtype.Text{
+            String: req.GetFullName(),
+            Valid:  req.FullName != nil,
+        },
+        Email: pgtype.Text{
+            String: req.GetEmail(),
+            Valid:  req.Email != nil,
+        },
+    }
+
+    if req.Password != nil {
+        hashedPassword, err := util.HashPassword(req.GetPassword())
+        if err != nil {
+            return nil, status.Error(codes.Internal, "failed to hash password")
+        }
+
+        arg.HashedPassword = pgtype.Text{
+            String: hashedPassword,
+            Valid:  true,
+        }
+
+        arg.PasswordChangedAt = pgtype.Timestamptz{
+            Time: time.Now(),
+            Valid: true,
+        }
+    }
+
+    user, err := server.store.UpdateUser(ctx, arg)
+    if err != nil {
+        if err == db.ErrNoRows {
+            return nil, status.Error(codes.NotFound, "user not found")
+        }
+
+        return nil, status.Error(codes.Internal, "failed to update user")
+    }
+
+    resp := &pb.UpdateUserResponse{
+        User: convertUser(user),
+    }
+    return resp, nil
+}
+
+func validateUpdateUserRequest(req *pb.UpdateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+    if err := validation.ValidateUsername(req.GetUsername()); err != nil {
+        violations = append(violations, fieldViolation("username", err))
+    }
+
+    if req.FullName != nil {
+        if err := validation.ValidateFullName(req.GetFullName()); err != nil {
+            violations = append(violations, fieldViolation("full_name", err))
+        }
+    }
+
+    if req.Email != nil {
+        if err := validation.ValidateEmail(req.GetEmail()); err != nil {
+            violations = append(violations, fieldViolation("email", err))
+        }
+    }
+
+    if req.Password != nil {
+        if err := validation.ValidatePassword(req.GetPassword()); err != nil {
+            violations = append(violations, fieldViolation("password", err))
+        }
+    }
+
+    return violations
+}
